--- a/task-service/pom.xml
+++ b/task-service/pom.xml
@@ -43,6 +43,14 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zipkin</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit</artifactId>
+		</dependency>
 		
 		 <dependency>
         <groupId>io.springfox</groupId>
@@ -78,6 +86,10 @@
 			<artifactId>
 				spring-cloud-starter-netflix-eureka-client
 			</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
 	</dependencies>
 
